--- a/Index.html
+++ b/Index.html
@@ -7,7 +7,7 @@ Index.html
     <title>Lab 4 Introduction to functions</title>
 </head>
 <body>
-    <h1>Introduction to Functions</h1>
+    <h1>LAB 4 Introduction to Functions</h1>
     
     <div>
         <label for="nameInput">Matsi:</label>
